{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 61,
  "lineage": "51513a5c-2b27-545b-e25a-aa326d7dc9b9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tic_tac_toe_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552005995088:internet-gateway/igw-0eeaa6c6d43790b01",
            "id": "igw-0eeaa6c6d43790b01",
            "owner_id": "552005995088",
            "tags": {
              "Name": "tic_tac_toe_igw"
            },
            "tags_all": {
              "Name": "tic_tac_toe_igw"
            },
            "vpc_id": "vpc-09e702815ebc6f18c"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "tic_tac_toe_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552005995088:route-table/rtb-05881d17e9ad8348b",
            "id": "rtb-05881d17e9ad8348b",
            "owner_id": "552005995088",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0eeaa6c6d43790b01",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tic_tac_toe_rt"
            },
            "tags_all": {
              "Name": "tic_tac_toe_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e702815ebc6f18c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tic_tac_toe_igw",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "tic_tac_toe_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0725e8015c838f474",
            "route_table_id": "rtb-05881d17e9ad8348b",
            "subnet_id": "subnet-032519b221ef1e24f"
          },
          "dependencies": [
            "aws_internet_gateway.tic_tac_toe_igw",
            "aws_route_table.tic_tac_toe_rt",
            "aws_subnet.tic_tac_toe_subnet",
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tic_tac_toe_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552005995088:security-group/sg-024216fac9a1dab83",
            "description": "Security group for accessing application and ec2 via SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-024216fac9a1dab83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH ingress",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "backend ingress",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http ingress",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https ingress",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "tic_tac_toe_sg",
            "name_prefix": "",
            "owner_id": "552005995088",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tic_tac_toe_sg"
            },
            "tags_all": {
              "Name": "tic_tac_toe_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e702815ebc6f18c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "tic_tac_toe_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552005995088:subnet/subnet-032519b221ef1e24f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032519b221ef1e24f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "552005995088",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tic_tac_toe_subnet"
            },
            "tags_all": {
              "Name": "tic_tac_toe_subnet"
            },
            "vpc_id": "vpc-09e702815ebc6f18c"
          },
          "dependencies": [
            "aws_vpc.app_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "app_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:552005995088:vpc/vpc-09e702815ebc6f18c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f200ef224d9729f4",
            "default_route_table_id": "rtb-041a866d223126a8d",
            "default_security_group_id": "sg-00850763c7f184a5f",
            "dhcp_options_id": "dopt-0c8af90bad7f8ca2d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e702815ebc6f18c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-041a866d223126a8d",
            "owner_id": "552005995088",
            "tags": {
              "Name": "app_vpc"
            },
            "tags_all": {
              "Name": "app_vpc"
            }
          }
        }
      ]
    }
  ]
}